[package]
name = "db-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
shiplift = "0.7.0"
tokio = { version = "1.45.1", features = ["full"] }
# Encryption and security
chacha20poly1305 = "0.8"
scrypt = "0.8"
rand = "0.8"
base64 = "0.13"
# File operations
dirs = "4.0"
directories = "4.0"
